# fr-script

./: .env.play  .gitignore  CHANGELOG.zh-CN.md  LICENSE  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts  vitest.config.mts
.github/workflows/: main.yml
docs/: dependents.md  index.html  splashscreen.html
docs/assets/: APITest-R4bzwExf.js  AppSetting-BPSXYhvq.css  AppSetting-CzdVzL2n.js  CodeEditor-BS0siMSm.js  CodeSnippetList-CxxW-h_2.js  DepManager-itFs2D9w.css  FloatWindow-WlRIGQ2O.js  InvokesManager-DFa7OsLf.css  Loading-Bb8i5b2_.js  Loading-DlsRqWou.css  NotFound-NOQqpz9S.js  Notification-09rD5CFF.js  Notification-CYoVKMFv.css  OperationRecordWindow-Bk95_9SV.js  OperationRecordWindow-D0NhMSjD.css  PointerUtil-CkdsTHNB.js  ScriptList-CV8RUoaA.css  ScriptRunConsole-BRq81nVZ.css  ScriptSetting-F9LtMXco.css  SettingPage-CU6YPbAA.css  cssMode-DZPTUFap.js  el-affix-CLjdDRlv.js  el-drawer-DakVXP-_.js  el-infinite-scroll-DJoDNyaO.js  el-loading-Cb413ljY.js  el-segmented-vz10XJfS.js  html-CbyBWcQV.js  htmlMode-weRIlN0R.js  index-Cwm3MLgW.js  isArrayLikeObject-CbXCMNMt.js  javascript-DVR8raNA.js  jsonMode-CNqt4iJF.js  liquid-DxiqSC8C.js  mdx-BXcw1xSl.js  xml-CqPYTgFN.js
play/: index.html
play/assets/: APITest-D-8L6BVC.js  APITest-D0I4StOi.css  APITest-N6Tjdx5b.css  About-BCceifZu.css  About-D5CJv8IN.js  About-DTbMdqOf.js  AlertCircle-B22zGb_L.js  AppSetting-3EVGW-SK.js  CodeEditor-FR_i8D9P.js  CodeEditor-QzKeQXVU.css  CodeIcon-BxJpOO0V.js  CodeIcon-RG0Qs4FB.js  CodeSnippetList-BoCUM5wE.css  CodeSnippetList-CeBc60qA.css  CodeSnippetList-NFaMvX3C.js  DepManager-CMDlxsT_.js  DepManager-slncRCfE.js  DepManagerPage-B0d0ZcLn.js  DepManagerPage-D12zU5Mx.js  FloatWindow-CVFsXK3Z.js  InvokesManager-1KjMrSoF.js  InvokesManager-9cdUpvla.js  InvokesManager-CGh3lPFl.css  Loading-BaoWSLnQ.js  NotFound-CkUJLpKF.js  Notification-CPVbjNdQ.js  Notification-D31fek_Y.css  OperationRecordWindow-BixRPl6v.css  OperationRecordWindow-ZZHg8GCI.js  PointerUtil-Cfd1aMg2.css  PointerUtil-DwwbAZHf.js  PointerUtil-MVY_-ZOS.css  ScriptConsole-BbPre3mo.js  ScriptConsole-Dvjrs3Ra.js  ScriptList-BF418Uvp.css  ScriptList-Dgr1r6w3.js  ScriptList-I207gj3O.js  ScriptProject-BAsEMJwW.js  ScriptProject-BEg5UXCe.js  ScriptProject-CJhvIlJR.css  (+56 more)
public/: index.html  splashscreen.html
public/assets/: AlertCircle-DipXxMDp.js  DepManagerPage-CVJXaVfi.css  FloatWindow-Cqy5Jt4P.css  ScriptConsole-OTGylQWN.css  dataStructure-D05SjcPX.css  el-empty-C55xF_EA.js  el-segmented-BEFFyh7Z.css  vue-draggable-plus-B7hlTZXz.js
script/: genApiDeclare.js  genBuiltInApiType.js  genEnumDeclare.js  genInvokeFnType.js  switchEnv.js
src/: App.vue  auto-imports.d.ts  components.d.ts  core.d.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/resources/: log4rs.yml
src-tauri/src/: constant.rs  event.rs  global.rs  lib.rs  main.rs
src-tauri/src/c_api/: mod.rs  ppocr.rs  util.rs
src-tauri/src/export_api/: cmd.rs  constant.rs  file.rs  image.rs  init.rs  input.rs  mod.rs  mouse.rs  request.rs  screen.rs  sys.rs  tools.rs  web_driver.rs
src-tauri/src/export_function/: mod.rs
src-tauri/src/export_function/input/: mod.rs
src-tauri/src/export_function/mouse_fn/: mod.rs
src-tauri/src/libs/: hooks.rs  mod.rs  ppocr.rs  util.rs
src-tauri/src/types/: fs_types.rs  hook_types.rs  mod.rs  mouse_types.rs
src/api/: api.d.ts  appConfigApi.ts  auth.ts  config.ts
src/components/: AppSetting.vue  AutoTitleBar.vue  CodeView.vue  CommonHeader.vue  EditorHeader.vue  FillApiParamDialog.vue  InvokesManagerForm.vue  Loading.vue  RawCodeView.vue  Test.vue  TitleBar.vue
src/hooks/: autoTipApis.ts  invokeApiRegister.ts  scriptRuntime.d.ts  (+21 more)
vitePlugins/: constants.ts  genDTS.ts  hotUpdate.ts  logConf.ts
(+599 files in other folders)
