[package]
name = "fr-script"
version = "2.0.3"
description = "风染脚本Tauri重构版"
authors = ["csfr"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
reqwest = "0.11.26"
lazy_static = "1.4.0"
tauri = { version = "1.5.4", features = [ "api-all"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
rusty-tesseract = "1.1.9"
libloading = "0.8.1"
enigo = {version="0.1.3", features = ["with_serde"] }
wio = "0.2"
winapi = { version = "0.3", features = ["winuser", "stringapiset", "winnls", "impl-default", "dcomp", "d2d1", "d2d1_2", "d3d11", "dxgi1_2", "dxgi1_3"] }
webbrowser = "1.0.0"
sevenz-rust= {version="0.6.0"}
encoding_rs = "0.8.34"
log = "0.4.21"
log4rs = "1.3.0"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
