[package]
name = "fr-script"
version = "2.1.0"
description = "风染脚本"
authors = ["chensuifengran"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
thirtyfour = "0.34.0"
reqwest = "0.12.8"
lazy_static = "1.5.0"
tauri = { version = "2.0.2", features = ["unstable"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rusty-tesseract = "1.1.10"
libloading = "0.8.5"
enigo = {version="0.2.1",features= ["serde"] }
wio = "0.2.2"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "stringapiset", "winnls", "impl-default", "dcomp", "d2d1", "d2d1_2", "d3d11", "dxgi1_2", "dxgi1_3"] }
webbrowser = "1.0.2"
sevenz-rust= {version="0.6.1"}
encoding_rs = "0.8.34"
log = "0.4.22"
log4rs = "1.3.0"
once_cell = "1.20.2"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "full"] }
futures = "0.3.31"
tauri-plugin-process = "2.0.1"
tauri-plugin-fs = "2.0.1"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-os = "2"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.0.1"
tauri-plugin-global-shortcut = "2.0.1"
